# librime-llama

./: CMakeLists.txt  README.md
src/: module.cc  plugin.cc  plugin.h
